styles.css
@font-face {
  font-family: 'Delicate';
  src: url('fonts/Mf Delicate Little Flower.ttf') format('truetype');
}

@font-face {
  font-family: 'Leaffy';
  src: url('fonts/Leaffy Demo.ttf') format('truetype');
}

* {
  box-sizing: border-box;
}

body {
  background-color: #FAEEE2;
}

img {
  max-width: 250px;
  max-height: 250px;
  border: 1px #E1DFDE solid;
  margin-top: 1em;
}

nav {
  background-color: #7291F3;
}

.home-container {
  margin: 1em;
}

header {
  display: flex;
  text-align: center;
  justify-content: center;
  margin: 3em;
}

header h1 {
  font-family: 'Delicate';
  /* font-family: 'Leaffy'; */
  Fallback: sans-serif;
  font-size: 3.5em;
  /* font-size: 2.5em; */
}

section {
  margin-bottom: 3em;
}

#avg-moods {
  display: flex;
  text-align: center;
  justify-content: center;
  padding: 0 1em 0 1em;
}

.avg-title {
  display: block;
  font-family: "Arial Black", Gadget, sans-serif;
  font-size: 1.5em;
}

#avg-moods p {
  display: block;
  /* font-family: "Arial Black", Gadget, sans-serif;
  font-size: 1.5em; */
  margin-top: 1em;
}

#avg-moods .div {
  background-color: green;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 1em;
}

.button-container {
  display: flex;
  justify-content: center;
  margin: 2em 0 4em 0;
}

.last-reported-container {
  padding: 1.5em;
  margin: 1.5em;
  background-color: #ffffff;
}

.last-reported {
  padding: 1em;
  border: 1px #6D6B69 solid;
}

.last-reported .row {
  display: flex;
  align-items: center;
  padding: 0 1em 1em 1em;
}

.last-reported h5 {
  display: flex;
  margin-right: 0.5em;
}

.lastData p {
  text-align: center;
}

.report-container {
  display: none;
  padding: 1.5em;
  background-color: #ffffff;
  margin: 2em;
}

.report-container h2 {
  color: #6D6B69;
  text-align: center;
  margin: 1em 0 1em 0;
}

.border {
  border: 1px #6D6B69 solid;
  padding: 1em;
}

.view-all {
  display: none;
  padding: 1em;
}

.all-reports h3 {
  text-align: left;
}

.submit-new {
  display: none;
}

.dropdown {
  margin-bottom: 4em;
}

#form {
  display: flex;
  text-align: left;
  font-weight: bold;
  padding-left: 3em;
  padding-bottom: 1em;
}

.report-container .row {
  margin-top: 5em;
  text-align: center;
}

h6 {
  text-align: center;
  font-family: "Courier New", Courier, monospace;
  font-size: 1.5em;
  margin-bottom: 1em;
  width: 100%;
}

.report-container .row .div {
  display: flex;
  flex-direction: column;
  margin: 1em;
}

.report-container p {
  display: block;
}

.report-container button {
  margin-top: 2em;
}

.selected {
  border: 1.5px #ABD6F9 solid;
}

.submit {
  display: flex;
  justify-content: center;
  margin-bottom: 2em;
}

.alert-success, .alert-danger {
  display: flex;
  justify-content: center;
  font-weight: bold;
  margin: auto;
  margin-top: 2em;
  max-width: 95%;
}

footer {
  text-align: center;
  color: #6D6B69;
  width: 100%;
  padding: 1.5em;
  bottom: 0;
}

